--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -5,3 +5,6 @@ instrument port = -1
 pixel scale x = 6.47222222222e-05
 pixel scale y = 6.47222222222e-05
 Observer = Observer
+
+[general]
+sockets = 40
