Added dewar info to the config file and cleaned some code in dewar_tab.py

--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -8,3 +8,83 @@ Observer = Observer
 
 [general]
 sockets = 40
+
+[mask]
+direction = 1
+pos0 = empty
+pos1 = empty
+pos2 = empty
+pos3 = empty
+pos4 = empty
+pos5 = empty
+pos6 = empty
+pos7 = empty
+[[home]]
+bit = 0
+val = 0
+[[position]]
+bit = 1
+val = 0
+
+[filter1]
+direction = 1
+pos0 = empty
+pos1 = empty
+pos2 = empty
+pos3 = empty
+pos4 = empty
+pos5 = empty
+pos6 = empty
+pos7 = empty
+[[home]]
+bit = 2
+val = 0
+[[position]]
+bit = 3
+val = 0
+
+[filter2]
+direction = 1
+pos0 = empty
+pos1 = empty
+pos2 = empty
+pos3 = empty
+pos4 = empty
+pos5 = empty
+pos6 = empty
+pos7 = empty
+[[home]]
+bit = 4
+val = 0
+[[position]]
+bit = 5
+val = 0
+
+[grism]
+direction = 1
+pos0 = empty
+pos1 = empty
+pos2 = empty
+pos3 = empty
+pos4 = empty
+pos5 = empty
+pos6 = empty
+pos7 = empty
+[[home]]
+bit = 6
+val = 0
+[[position]]
+bit = 7
+val = 0
+
+[array]
+direction = -1
+[[home]]
+bit = 8
+val = 1
+[[lower]]
+bit = 9
+val = 0
+[[upper]]
+bit = 10
+val = 0
