Changing dewar_tab.py to use the nessisettings config file.

--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -10,15 +10,16 @@ Observer = Observer
 sockets = 40
 
 [mask]
+name = Mask
 direction = 1
-pos0 = empty
-pos1 = empty
-pos2 = empty
-pos3 = empty
-pos4 = empty
-pos5 = empty
-pos6 = empty
-pos7 = empty
+pos0 = empty0
+pos1 = empty1
+pos2 = empty2
+pos3 = empty3
+pos4 = empty4
+pos5 = empty5
+pos6 = empty6
+pos7 = empty7
 [[home]]
 bit = 0
 val = 0
@@ -27,15 +28,16 @@ bit = 1
 val = 0
 
 [filter1]
+name = Filter1
 direction = 1
-pos0 = empty
-pos1 = empty
-pos2 = empty
-pos3 = empty
-pos4 = empty
-pos5 = empty
-pos6 = empty
-pos7 = empty
+pos0 = empty0
+pos1 = empty1
+pos2 = empty2
+pos3 = empty3
+pos4 = empty4
+pos5 = empty5
+pos6 = empty6
+pos7 = empty7
 [[home]]
 bit = 2
 val = 0
@@ -44,15 +46,16 @@ bit = 3
 val = 0
 
 [filter2]
+name = Filter2
 direction = 1
-pos0 = empty
-pos1 = empty
-pos2 = empty
-pos3 = empty
-pos4 = empty
-pos5 = empty
-pos6 = empty
-pos7 = empty
+pos0 = empty0
+pos1 = empty1
+pos2 = empty2
+pos3 = empty3
+pos4 = empty4
+pos5 = empty5
+pos6 = empty6
+pos7 = empty7
 [[home]]
 bit = 4
 val = 0
@@ -61,15 +64,16 @@ bit = 5
 val = 0
 
 [grism]
+name = Grism
 direction = 1
-pos0 = empty
-pos1 = empty
-pos2 = empty
-pos3 = empty
-pos4 = empty
-pos5 = empty
-pos6 = empty
-pos7 = empty
+pos0 = empty0
+pos1 = empty1
+pos2 = empty2
+pos3 = empty3
+pos4 = empty4
+pos5 = empty5
+pos6 = empty6
+pos7 = empty7
 [[home]]
 bit = 6
 val = 0
