Changed filterpanel.py to be a more general dewar wheel panel and updated overview.py to reflect that.

--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -11,7 +11,9 @@ sockets = 40
 
 [mask]
 name = Mask
+type = mask
 direction = 1
+slots = 8
 pos0 = empty0
 pos1 = empty1
 pos2 = empty2
@@ -29,7 +31,9 @@ val = 0
 
 [filter1]
 name = Filter1
+type = filter
 direction = 1
+slots = 8
 pos0 = empty0
 pos1 = empty1
 pos2 = empty2
@@ -47,7 +51,9 @@ val = 0
 
 [filter2]
 name = Filter2
+type = filter
 direction = 1
+slots = 8
 pos0 = empty0
 pos1 = empty1
 pos2 = empty2
@@ -65,15 +71,14 @@ val = 0
 
 [grism]
 name = Grism
+type = grism
 direction = 1
+slots = 5
 pos0 = empty0
 pos1 = empty1
 pos2 = empty2
 pos3 = empty3
 pos4 = empty4
-pos5 = empty5
-pos6 = empty6
-pos7 = empty7
 [[home]]
 bit = 6
 val = 0
