--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -14,6 +14,8 @@ name = Mask
 type = mask
 direction = 1
 slots = 8
+group = G1
+positioner = P1
 pos0 = empty0
 pos1 = empty1
 pos2 = empty2
@@ -34,6 +36,8 @@ name = Filter1
 type = filter
 direction = 1
 slots = 8
+group = G2
+positioner = P1
 pos0 = empty0
 pos1 = empty1
 pos2 = empty2
@@ -54,6 +58,8 @@ name = Filter2
 type = filter
 direction = 1
 slots = 8
+group = G3
+positioner = P1
 pos0 = empty0
 pos1 = empty1
 pos2 = empty2
@@ -74,11 +80,13 @@ name = Grism
 type = grism
 direction = 1
 slots = 5
-pos0 = empty0
-pos1 = empty1
-pos2 = empty2
-pos3 = empty3
-pos4 = empty4
+group = G4
+positioner = P1
+pos0 = Open
+pos1 = Low Broadband
+pos2 = J Hi-Res
+pos3 = H Hi-Res
+pos4 = K Hi-res
 [[home]]
 bit = 6
 val = 0
@@ -88,6 +96,8 @@ val = 0
 
 [array]
 direction = -1
+group = G5
+positioner = P1
 [[home]]
 bit = 8
 val = 1
