Updating the config file with filter names.

--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -16,14 +16,14 @@ direction = 1
 slots = 8
 group = G1
 positioner = P1
-pos0 = empty0
-pos1 = empty1
-pos2 = empty2
-pos3 = empty3
-pos4 = empty4
-pos5 = empty5
-pos6 = empty6
-pos7 = empty7
+pos0 = Open
+pos1 = Single Hole
+pos2 = Multi Hole Grid
+pos3 = Long Slit
+pos4 = Mask EP1 (GJ436)
+pos5 = Mask EP2 (HAT-P22)
+pos6 = Mask EP3 (WASP14)
+pos7 = Mask EP4 (WASP43)
 [[home]]
 bit = 0
 val = 0
@@ -38,11 +38,11 @@ direction = -1
 slots = 8
 group = G2
 positioner = P1
-pos0 = empty0
-pos1 = empty1
-pos2 = empty2
-pos3 = empty3
-pos4 = empty4
+pos0 = Open
+pos1 = JHK (Broad)
+pos2 = J
+pos3 = H
+pos4 = K
 pos5 = empty5
 pos6 = empty6
 pos7 = empty7
@@ -60,8 +60,8 @@ direction = -1
 slots = 8
 group = G3
 positioner = P1
-pos0 = empty0
-pos1 = empty1
+pos0 = Open
+pos1 = Blank Off
 pos2 = empty2
 pos3 = empty3
 pos4 = empty4
@@ -83,10 +83,10 @@ slots = 5
 group = G4
 positioner = P1
 pos0 = Open
-pos1 = Low Broadband
-pos2 = J Hi-Res
-pos3 = H Hi-Res
-pos4 = K Hi-res
+pos1 = Low Resolution
+pos2 = J
+pos3 = H
+pos4 = K
 [[home]]
 bit = 6
 val = 0
