--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -15,7 +15,7 @@ type = mask
 direction = 1
 slots = 8
 group = G1
-positioner = P1
+positioner = G1.P1
 pos0 = Open
 pos1 = Single Hole
 pos2 = Multi Hole Grid
@@ -37,7 +37,7 @@ type = filter
 direction = -1
 slots = 8
 group = G2
-positioner = P1
+positioner = G2.P1
 pos0 = Open
 pos1 = JHK (Broad)
 pos2 = J
@@ -59,7 +59,7 @@ type = filter
 direction = -1
 slots = 8
 group = G3
-positioner = P1
+positioner = G3.P1
 pos0 = Open
 pos1 = empty1
 pos2 = empty2
@@ -81,7 +81,7 @@ type = grism
 direction = 1
 slots = 5
 group = G4
-positioner = P1
+positioner = G4.P1
 pos0 = Open
 pos1 = Low Resolution
 pos2 = J
@@ -97,7 +97,7 @@ val = 0
 [array]
 direction = -1
 group = G5
-positioner = P1
+positioner = G5.P1
 [[home]]
 bit = 8
 val = 1
@@ -111,5 +111,5 @@ val = 0
 [kmirror]
 name = K-Mirror
 group = M
-positioner = P1
+positioner = M.P1
 direction = -1
