--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -16,6 +16,7 @@ direction = 1
 slots = 8
 group = G1
 positioner = G1.P1
+pos  = Open, Single Hole, Multi Hole Grid, Long Slit, Mask EP1 (GJ436), Mask EP2 (HAT-P22), Mask EP3 (WASP14), Mask EP4 (WASP43)
 pos0 = Open
 pos1 = Single Hole
 pos2 = Multi Hole Grid
@@ -38,6 +39,7 @@ direction = -1
 slots = 8
 group = G2
 positioner = G2.P1
+pos  = Open, JHK (Broad), J, H, K, Blank Off, empty6, empty7
 pos0 = Open
 pos1 = JHK (Broad)
 pos2 = J
@@ -60,6 +62,7 @@ direction = -1
 slots = 8
 group = G3
 positioner = G3.P1
+pos  = Open, empty1, empty2, empty3, empty4, empty5, empty6, empty7
 pos0 = Open
 pos1 = empty1
 pos2 = empty2
@@ -82,6 +85,7 @@ direction = 1
 slots = 5
 group = G4
 positioner = G4.P1
+pos  = Open, Low Resolution, J, H, K
 pos0 = Open
 pos1 = Low Resolution
 pos2 = J
