--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -85,17 +85,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/instrument.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Nessi.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/instrument.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Nessi.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/instrument"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/instrument"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/Nessi"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/Nessi"
 	@echo "# devhelp"
 
 epub:
