--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -1,4 +1,4 @@
-scope server = 192.168.0.2
+scope server = 'eos.nmt.edu'
 scope port = 7624
 savefolder = /home/lschmidt/Downloads/
 instrument port = -1
