dewar wheel labels added

--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -16,15 +16,15 @@ direction = 1
 slots = 8
 group = G1
 positioner = G1.P1
-pos  = Open, Single Hole, Multi Hole Grid, Long Slit, Mask EP1 (GJ436), Mask EP2 (HAT-P22), Mask EP3 (WASP14), Mask EP4 (WASP43)
+pos  = Open, 55 Cnc e, XO-2b, Long SLit, GJ 436b, Graduated Slit, Grid, Single
 pos0 = Open
-pos1 = Single Hole
-pos2 = Multi Hole Grid
+pos1 = 55 Cnc e
+pos2 = XO-2b
 pos3 = Long Slit
-pos4 = Mask EP1 (GJ436)
-pos5 = Mask EP2 (HAT-P22)
-pos6 = Mask EP3 (WASP14)
-pos7 = Mask EP4 (WASP43)
+pos4 = GJ 436b
+pos5 = Graduated Slit
+pos6 = Grid
+pos7 = Single
 [[home]]
 bit = 0
 val = 0
@@ -39,15 +39,15 @@ direction = -1
 slots = 8
 group = G2
 positioner = G2.P1
-pos  = Open, JHK (Broad), J, H, K, Blank Off, empty6, empty7
+pos  = Open, CO 2338.5 nm, Open, Open, Open, Open, Open, Dark
 pos0 = Open
-pos1 = JHK (Broad)
-pos2 = J
-pos3 = H
-pos4 = K
-pos5 = Blank Off
-pos6 = empty6
-pos7 = empty7
+pos1 = CO 2338.5 nm
+pos2 = Open
+pos3 = Open
+pos4 = Open
+pos5 = Open
+pos6 = Open
+pos7 = Dark
 [[home]]
 bit = 2
 val = 0
@@ -62,15 +62,15 @@ direction = -1
 slots = 8
 group = G3
 positioner = G3.P1
-pos  = Open, empty1, empty2, empty3, empty4, empty5, empty6, empty7
+pos  = Open, Wide, J, H, K, Dark, Bracket Gamma On, Bracket Gamma Off
 pos0 = Open
-pos1 = empty1
-pos2 = empty2
-pos3 = empty3
-pos4 = empty4
-pos5 = empty5
-pos6 = empty6
-pos7 = empty7
+pos1 = Wide
+pos2 = J
+pos3 = H
+pos4 = K
+pos5 = Dark
+pos6 = Bracket Gamma On
+pos7 = Bracket Gamma Off
 [[home]]
 bit = 4
 val = 0
@@ -85,9 +85,9 @@ direction = 1
 slots = 5
 group = G4
 positioner = G4.P1
-pos  = Open, Low Resolution, J, H, K
+pos  = Open, Wide, J, H, K
 pos0 = Open
-pos1 = Low Resolution
+pos1 = Wide
 pos2 = J
 pos3 = H
 pos4 = K
