update mask order

--- a/nessisettings.ini
+++ b/nessisettings.ini
@@ -16,15 +16,15 @@ direction = 1
 slots = 8
 group = G1
 positioner = G1.P1
-pos  = Open, 55 Cnc e, XO-2b, Long SLit, GJ 436b, Graduated Slit, Grid, Single
-pos0 = Open
-pos1 = 55 Cnc e
-pos2 = XO-2b
-pos3 = Long Slit
-pos4 = GJ 436b
-pos5 = Graduated Slit
-pos6 = Grid
-pos7 = Single
+pos  = Single, Open, 55 Cnc e, XO-2b, Long SLit, GJ 436b, Graduated Slit, Grid
+pos0 = Single
+pos1 = Open
+pos2 = 55 Cnc e
+pos3 = XO-2b
+pos4 = Long Slit
+pos5 = GJ 436b
+pos6 = Graduated Slit
+pos7 = Grid
 [[home]]
 bit = 0
 val = 0
